--- a/src/app/components/category-list/category-list.component.html
+++ b/src/app/components/category-list/category-list.component.html
@@ -1,1 +1,62 @@
-<p>category-list works!</p>
+<div class="div mt-5 container table-container">
+  <h1>Categories</h1>
+  <hr />
+
+  <div class="container table">
+    <div
+      class="spinner-container d-flex justify-content-center mt-5"
+      *ngIf="loading"
+    >
+      <mat-spinner></mat-spinner>
+    </div>
+    <table
+      mat-table
+      class="mat-elevation-z5 users-table"
+      [dataSource]="categories"
+      *ngIf="!loading"
+      matSort
+    >
+      <ng-container matColumnDef="ID">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let category">
+          {{ category.id }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="CategoryName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Category Name</th>
+        <td mat-cell *matCellDef="let category">{{ category.categoryName }}</td>
+      </ng-container>
+      <ng-container matColumnDef="Action">
+        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <td mat-cell *matCellDef="let category">
+          <button
+            mat-icon-button
+            color="warn"
+            aria-label="Example icon button with a home icon"
+            (click)="handleDelete(category.id)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+          <button
+            mat-icon-button
+            class="edit-icon"
+            aria-label="Example icon button with a home icon"
+            (click)="handleUpdate(category)"
+          >
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
+      <tr mat-row *matRowDef="let user; columns: displayColumns"></tr>
+    </table>
+    <button
+      mat-raised-button
+      color="primary"
+      class="mt-3"
+      routerLink="/user/add"
+    >
+      Add new
+    </button>
+  </div>
+</div>
