--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -11,8 +11,8 @@
     <a mat-button routerLink="/users" class="mat-button">
       <mat-icon>supervisor_account</mat-icon>Customers
     </a>
-    <a mat-button routerLink="/teams" class="mat-button"> Products </a>
-    <a mat-button routerLink="/teams" class="mat-button">
+    <a mat-button routerLink="/products" class="mat-button"> Products </a>
+    <a mat-button routerLink="/categories" class="mat-button">
       <i class="fa fa-users" aria-hidden="true"></i>
       Categories
     </a>
